# poetry-issue-editable

app/: Dockerfile  __init__.py  pyproject.toml
lib/: pyproject.toml  setup.py
lib/lib/: __init__.py
lib/lib.egg-info/: PKG-INFO  SOURCES.txt
lib2/: pyproject.toml  setup.py
lib2/lib2.egg-info/: PKG-INFO  SOURCES.txt
lib2/pip-wheel-metadata/lib2-0.1.0.dist-info/: METADATA
