[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Nathan Barraille <nathan.barraille@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
lib2 = {path = "../lib2/"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
